# verifacta-colombia-2026

./: .flake8  .gitignore  CLAUDE.md  README.md  departamentos_de_interes.json  pyproject.toml
scripts/: 100_municipios_mas_poblados.csv
src/verifacta/: __init__.py  cli.py
src/verifacta/analysis/: detector.py  extractor.py
src/verifacta/scraper/: client.py  downloader.py  models.py  sampler.py
src/verifacta/storage/: repository.py
tests/test_scraper/: test_models.py
