[project]
name = "verifacta-elecciones"
version = "0.1.0"
description = "Veeduría electoral: detección de tachones en actas E14 de la Registraduría (Colombia 2026)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "tenacity>=8.3",
    "playwright>=1.60.0",
    "boto3>=1.43.34",
    "google-genai>=2.9.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.44",
]

[project.scripts]
verifacta = "verifacta.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifacta"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]
